--- a/src/styles/partials/section.css
+++ b/src/styles/partials/section.css
@@ -35,6 +35,10 @@ section.container {
   width: 105px;
 }
 
+.coffee-content-button button:hover, .container-social-medias img:hover  {
+  opacity: 0.8;
+}
+
 @media (max-width: 425px) {
   .coffee-content-text p {
     font-size: 20px;
